# gers

./: .gitattributes  .gitignore  Cargo.toml  README.md
core/: .gitignore  Cargo.toml
core/src/: lib.rs
examples/: basic.wren  foobar.wren  hello.py  mygame.wren  voronoi.wren
gers/: Cargo.toml
gers-codegen/: .gitignore  Cargo.toml
gers-codegen/src/: lib.rs
gers/examples/: helloworld.rs  inputmap.yaml
gers/src/: app.rs  app_layer.rs  color.rs  errors.rs  input.rs  intern.rs  lib.rs
gers/src/gfx/: backend.rs  mod.rs  opengl.rs
python/: .gitignore  Cargo.toml  setup.py
python/gers/: __init__.py
python/src/: lib.rs
src/: entity.rs  errors.rs  game.wren  input.rs  input.wren  main.rs  main.wren  util.rs  window.rs  window.wren
src/collections/: mod.rs  script_array.rs  script_array.wren
src/game/: fps.rs  game.rs  game.wren  mod.rs
src/graphics/: angle.rs  colour.rs  device.rs  device.wren  errors.rs  mod.rs  rect.rs  shader.rs  shader.wren  sprite.rs  sprite.wren  sprite_batch.rs  sprite_batch.wren  texture.rs  texture.wren  transform.rs  transform.wren  utils.rs  vao.rs  vao.wren  vertex.rs  vertex.wren  vertex_array.rs  vertex_array.wren  vertex_buf.rs  vertex_buf.wren
src/graphics/shaders/: sprite.frag  sprite.vert
src/io/: loader.rs  mod.rs
src/math/: mod.rs  vector.rs  vector.wren
src/noise/: mod.rs  perm.rs  perm.wren  poisson.rs  poisson.wren  voronoi.rs  voronoi.wren
src/window/: config.rs  config.wren  mod.rs  signal.wren
