[package]
name = "gers"
version = "0.1.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
legion = "0.3"
log = "0.4"
rust-wren = { version = "*", git = "https://gitlab.com/vangroan/rust-wren.git", branch="feature/wren-handel-leak" }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.5"
slog-scope = "4.3"
slog-stdlog = "4.1"
slog-term = "2.6"
smol_str = "0.1"
winit = "0.24"
