[workspace]

members = [
    "gers",
]

[profile.release]
# Controls LLVM's link time optimizations.
# Can produce better optimized code, using whole-program analysis,
# at the cost of longer linking time.
lto = true
# Less parallel generation units means slower
# compilation for potentially faster code.
codegen-units = 1
# Include debug symbols.
debug = true
