[package]
name = "gers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
slog = "2.7"
slog-async = "2.7"
slog-scope = "4.4"
slog-stdlog = "4.1"
slog-term = "2.7"

[dependencies]

# Serialization
serde = "1.0"
serde_yaml = "0.9"
smol_str = "0.1"

# Logging
log = "0.4"

# Graphics

# Windowing
glutin = "0.30"
winit = { version = "0.28", features = ["serde"] }
