[package]
name = "python"
version = "0.1.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gers"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]

[dependencies.gers_core]
path = "../core"
